# robot2017

./: .clang-format  .gitignore  .gitmodules  README.md
firmware/F303_motors_board/: CommMsgs.pb.c  CommMsgs.pb.h  F303_motors_board.config  F303_motors_board.files  F303_motors_board.includes  Makefile  README.md  chconf.h  halconf.h  mcuconf.h
firmware/F303_motors_board/src/: Board.cpp  Board.h  Communication.cpp  Communication.h  main.cpp
firmware/F303_motors_board_ROS/: F303_motors_board_ROS.config  F303_motors_board_ROS.files  F303_motors_board_ROS.includes  Makefile  README.md  chconf.h  halconf.h  mcuconf.h  mcuconf_community.h
firmware/F303_motors_board_ROS/src/: Board.cpp  Board.h  main.cpp
firmware/L476_board_ROS/: L476_board.includes  L476_board_ROS.files  L476_board_ROS.includes  Makefile  chconf.h  halconf.h  mcuconf.h
firmware/L476_board_ROS/src/: Board.cpp  Board.h  main.cpp
firmware/L476_board_asserv/: L476_board_asserv.config  L476_board_asserv.files  L476_board_asserv.includes  Makefile  README.md  chconf.h  halconf.h
firmware/L476_board_asserv/src/: Board.cpp  Board.h  RosPublisher.cpp  RosSerial.cpp  RosSerial.h  main.cpp  trajecto.cpp  trajecto.h
firmware/L476_board_match1/: mcuconf_community.h
firmware/L476_board_match1/src/: Board.cpp  Board.h  main.cpp
firmware/L476_board_match2/: L476_board_match2.includes  mcuconf.h
firmware/L476_board_match2/src/: Board.cpp  Board.h  main.cpp
firmware/common/: README.md  binsize.py
firmware/common/AdcTimer/: AdcTimer.cpp  AdcTimer.h  AdcTimer.mk
firmware/common/Gpio/: Gpio.mk  Input.cpp  Input.h  Output.cpp  Output.h
firmware/common/Motor/: ArdumotoShield.cpp  ArdumotoShield.h  L298.cpp  L298.h  L298Motors.cpp  L298Motors.h  MonsterShield.cpp  MonsterShield.h  Motor.cpp  Motor.h  Motor.mk  Motors.cpp  Motors.h
firmware/common/Pid/: Pid.cpp  Pid.h  Pid.mk
firmware/common/Qei/: Qei.cpp  Qei.h  Qei.mk
firmware/common/RunningAverage/: RunningAverage.h  RunningAverage.mk
firmware/common/SerialComm/: SerialComm.cpp  SerialComm.h  SerialComm.mk
firmware/common/pca9685/: PCA9685.cpp  PCA9685.hpp  PwmBase.hpp  pca9685.mk
firmware/common/pca9685_adafruit/: Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  pca9685_adafruit.mk
firmware/common/ros_lib/: ChibiOSHardware.h  ros.mk
firmware/common/tcs34725_adafruit/: Adafruit_TCS34725.cpp  Adafruit_TCS34725.h  tcs34725_adafruit.mk
firmware/common/vl53l0x/: vl53l0x.mk
firmware/common/vl53l0x_cpp/: VL53L0X.cpp  VL53L0X.h  vl53l0x_cpp.mk
firmware/motors_board/: CommMsgs.pb.c  CommMsgs.pb.h  Makefile  mcuconf.h  mcuconf_community.h  motors_board.files  motors_board.includes
firmware/motors_board/src/: Board.cpp  Board.h  CommMsgs.pb.c  Communication.cpp  Communication.h  defs.h  main.cpp
msg/: CommMsgs.options  CommMsgs.proto  Makefile
ros_ws/: Ros_Workspace.files  Ros_Workspace.includes  exclude.txt  pc_ip_env.sh  robot_ip_env.sh  sync.sh
ros_ws/src/diff_drive_encoders_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  diff_drive_encoders_controller_plugins.xml  package.xml
ros_ws/src/diff_drive_encoders_controller/src/: diff_drive_encoders_controller.cpp  odometry.cpp  speed_limiter.cpp
ros_ws/src/diff_drive_encoders_controller/test/: diff_drive_bad_urdf.test  diff_drive_common.launch  diff_drive_controller.test  diff_drive_controller_limits.test  diff_drive_controller_nan.test  diff_drive_multipliers.test  diff_drive_odom_tf.test  diff_drive_open_loop.test  diff_drive_radius_param.test  diff_drive_radius_param_fail.test  diff_drive_separation_param.test  diff_drive_timeout.test  diff_drive_wrong.test  diffbot.xacro  diffbot_controllers.yaml  diffbot_sphere_wheels.xacro  diffbot_wrong.yaml  skid_steer_common.launch  skid_steer_controller.test  skid_steer_no_wheels.test  skidsteerbot.xacro  skidsteerbot_controllers.yaml  skidsteerbot_no_wheels.yaml  view_diffbot.launch  view_skidsteerbot.launch
ros_ws/src/map_odom_tf_broadcaster/: CMakeLists.txt  package.xml
ros_ws/src/map_odom_tf_broadcaster/src/: map_odom_tf_broadcaster_node.cpp
ros_ws/src/odom_calibration/: CMakeLists.txt  package.xml
ros_ws/src/robot_move/: CMakeLists.txt  package.xml  sendPath.sh  sendSquare.sh
ros_ws/src/robot_move/config/: config.rviz
ros_ws/src/robot_move/launch/: robot_move.launch
ros_ws/src/robot_move/src/: robot_move.cpp
ros_ws/src/robot_move/srv/: FollowSegment.srv
ros_ws/src/rosserial_chibios/: CMakeLists.txt  README.md  package.xml
ros_ws/src/rosserial_chibios/src/ros_lib/: ChibiOSHardware.h  ros.h
ros_ws/src/rosserial_chibios/src/rosserial_chibios/: make_libraries.py
ros_ws/src/snd_behaviors/: README.md
ros_ws/src/snd_bringup/: CMakeLists.txt  package.xml
ros_ws/src/snd_control/: CMakeLists.txt  package.xml
ros_ws/src/snd_control/cfg/: Pid.cfg
ros_ws/src/snd_control/config/: control.yaml  pid_tuner.perspective
ros_ws/src/snd_control/include/snd_control/: snd_hardware.h  snd_hardware_ros.h
ros_ws/src/snd_control/launch/: control.launch  control_ros.launch  rplidar.launch  serial_server.launch  teleop.launch
ros_ws/src/snd_control/scripts/: pid_tuner.py
ros_ws/src/snd_control/src/: encoders_speed_computer.cpp  snd_control.cpp  snd_control_ros.cpp  snd_hardware.cpp  snd_hardware_ros.cpp
ros_ws/src/snd_description/: CMakeLists.txt  package.xml
ros_ws/src/snd_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/snd_gazebo_plugins/: CMakeLists.txt  package.xml
ros_ws/src/snd_gazebo_plugins/src/FakeRobotPlugin/: FakeRobotPlugin.cpp  FakeRobotPlugin.h
ros_ws/src/snd_gazebo_plugins/src/RobotPlugin/: PwmData.h  RobotPlugin.cpp  RobotPlugin.h
ros_ws/src/snd_gazebo_plugins/src/lib_lut/: LibLut.cpp  LibLut.h
ros_ws/src/snd_lcd/: CMakeLists.txt  README.md  package.xml
ros_ws/src/snd_move_base/: CMakeLists.txt  package.xml
ros_ws/src/snd_moves/: CMakeLists.txt  package.xml
ros_ws/src/snd_msgs/: CMakeLists.txt  package.xml
ros_ws/src/snd_navigation/: CMakeLists.txt  package.xml
ros_ws/src/snd_robot_control/: CMakeLists.txt  package.xml
ros_ws/src/snd_serial/: CMakeLists.txt  package.xml
(+141 files in other folders)
