<?xml version="1.0"?>
<package format="2">
  <name>robot_move</name>
  <version>0.0.0</version>
  <description>The robot_move package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="aba@todo.todo">aba</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>catkin</depend>
  <depend>costmap_2d</depend>
  <depend>dwb_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_2d_msgs</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_core2</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>
  <depend>dwb_local_planner</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
