<?xml version="1.0"?>
<package>
  <name>snd_control</name>
  <version>0.0.2</version>
  <description>The snd_control package contains the programs related to the
      control of the hardware of the robot</description>

  <maintainer email="rom.reignier@gmail.com">Romain Reignier</maintainer>
  <author email="rom.reignier@gmail.com">Romain Reignier</author>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diff_drive_encoders_controller</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>snd_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_encoders_controller</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>rosparam_shortcuts</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>snd_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
